
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 DEC 22a
  * in cycle/resconv/_MUSCL/resconv.c
    - in  write_disc_resconv_template(), changed the defaults to EIGENVALCOND_PECLET and
      POSFILTER_NONE
  * in model/thermo/_generic/thermo.c
    - in _hk_from_T(), fixed a bug when _FLUID_EENERGY && spec==speceminus: the enthalpy of the
      electrons should be _he_from_Te(T) and not _he_from_Te(T+dTplus)
    - in _dsk_dT_from_T() and _dsk_dT_from_T_equilibrium(), fixed a bug that occurred for all 
      species when the temperature was higher than the maximum temperature of the NASA Glenn 
      enthalpy polynomials (20000 K for most)
  * in src/test.c
    - added test_s_equilibrium() and test_dsdT_equilibrium()
    - in main(), added calls to test_s_equilibrium() and test_dsdT_equilibrium()


2020 DEC 21a
  * in model/fluid/_*_plasma/fluid_plasma.c 
    - in find_Dstar(), set Dstar to zero at the boundary nodes (fluid type)
  * in model/share/emfield_share.c
    - in find_Ve_from_J(), when the node is a boundary node, set Ve to electron velocity at 
      nearest inner node 
  * in src/common.c
    - in find_l_of_nearest_inner_node(), renamed nodetype for TYPELEVEL
    

2020 DEC 19a
  * in model/chem/_Cs_Air_Plasma_11s/chem.c and model/chem/_Cs_Air_Plasma_15s/chem.c
    - changed default value of TOWNSENDIONIZATION to TRUE
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - in find_DeltaVk_from_mu(), got rid of setting DeltaVk to zero at the boundary and near 
      boundary nodes
    - in read_model_emfield_actions(), got rid of setting B to zero at the boundary and near
      boundary nodes
      

2020 DEC 16a
  * in bin
    - added HOSTS12.mpich
    - added HOSTS2.mpich
  * modified
    - bin/MHD_generator_cesium.wrp